# itusct_autonomous

./: .gitignore  CMakeLists.txt  README.md
calculatorClass/: CMakeLists.txt  test.cpp
calculatorClass/include/: calculator.hpp
itusct_autonomous_weekly1/: README.md
itusct_autonomous_weekly1/matrixClass/: CMakeLists.txt  test.cpp
itusct_autonomous_weekly1/matrixClass/include/: matrix.hpp
itusct_autonomous_weekly1/pointStruct/: CMakeLists.txt  pointStruct.cpp
itusct_autonomous_weekly2/: CMakeLists.txt  README.md
itusct_autonomous_weekly2/cppVariables/: CMakeLists.txt  cppVariables.cpp
itusct_autonomous_weekly3/: CMakeLists.txt  README.md
itusct_autonomous_weekly3/assignment3_solutions/smartPointers/: CMakeLists.txt  smartPointers.cpp
itusct_autonomous_weekly5/: CMakeLists.txt
itusct_autonomous_weekly5/menuBot/: CMakeLists.txt  main  menu.json  testJSON  testMenu
itusct_autonomous_weekly5/menuBot/include/: interface.hpp  menu.hpp  user.hpp
itusct_autonomous_weekly5/menuBot/src/: CMakeLists.txt  interface.cpp  main.cpp  menu.cpp  user.cpp
itusct_autonomous_weekly5/menuBot/test/: CMakeLists.txt  testJSON.cpp  testMenu.cpp
itusct_autonomous_weekly6/: README.md
itusct_autonomous_weekly6/menuBotUI/: menuBotUI.pro
itusct_autonomous_weekly6/menuBotUI/include/headers/: approve_menu.hpp  dish_widget.hpp  login_screen.hpp  main_screen.hpp  show_items.hpp  show_menu.hpp  suggestion_screen.hpp
itusct_autonomous_weekly6/menuBotUI/include/menu_bot/: interface.hpp  menu.hpp  user.hpp
itusct_autonomous_weekly6/menuBotUI/include/ui/: approve_menu.ui  login_screen.ui  main_screen.ui  show_items.ui  show_menu.ui  suggestion_screen.ui
itusct_autonomous_weekly6/menuBotUI/resources/: images.qrc
itusct_autonomous_weekly6/menuBotUI/src/menu_bot/: interface.cpp  menu.cpp  user.cpp
itusct_autonomous_weekly7/: .gitignore  README.md
itusct_autonomous_weekly7/weekly7_ws/install/: local_setup.sh  setup.sh
itusct_autonomous_weekly7/weekly7_ws/log/: latest_build
itusct_autonomous_weekly7/weekly7_ws/src/sct_img_filter/: CMakeLists.txt
itusct_autonomous_weekly7/weekly7_ws/src/sct_img_filter/config/: config.yaml
itusct_autonomous_weekly7/weekly7_ws/src/sct_img_filter/src/: img_filterer.cpp  img_publisher.cpp
itusct_autonomous_weekly7/weekly7_ws/src/sct_turtlesim_joy_controller/: CMakeLists.txt
itusct_autonomous_weekly7/weekly7_ws/src/sct_turtlesim_joy_controller/launch/: start_all.launch.py
itusct_autonomous_weekly7/weekly7_ws/src/sct_turtlesim_joy_controller/src/: joy_controller.cpp
matrixClass/: test.cpp
pointStruct/: pointStruct.cpp
(+25 files in other folders)
